# Plant-Selector

./: .gitignore  CMakeLists.txt  README.md  default.rviz  main_panel_plugin_description.xml  package.xml  publishing_selector_plugin_description.xml  rosbag_panel_plugin_description.xml  test_save.pcd  val_plant.world
cam_params/: common.yaml  zed2i.yaml
doxygen/: Doxyfile
doxygen/html/: annotated.html  classes.html  classeval_1_1WeedMetrics-members.html  classeval_1_1WeedMetrics.html  classplant__extraction_1_1PlantExtractor-members.html  classplant__extraction_1_1PlantExtractor.html  classrepetitive__plant__extraction_1_1RepetitivePlantExtractor-members.html  classrepetitive__plant__extraction_1_1RepetitivePlantExtractor.html  clustering__tests_8py.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  eval_8py.html  facet__region__growing_8py.html  files.html  find__centroids_8py.html  functions.html  functions_func.html  functions_vars.html  gen__alg_8py.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  leaf__axis_8py.html  main__panel_8cpp.html  main__panel_8cpp__incl.map  main__panel_8cpp__incl.md5  menudata.js  multigrasp__evaluation_8py.html  namespaceclustering__tests.html  namespaceeval.html  namespacefacet__region__growing.html  namespacefind__centroids.html  namespacegen__alg.html  namespaceleaf__axis.html  namespacemembers.html  namespacemembers_func.html  namespacemultigrasp__evaluation.html  namespacenearest__prototype__classifier.html  namespacenearest__prototype__classifier__test.html  (+24 more)
include/plant_selector/: main_panel.hpp  publishing_selector.hpp  real_time_handler.hpp  rosbag_panel.hpp
launch/: plant_selector.launch  realsense.launch  setup.launch  torso_to_zed.launch  val.launch  val_repetitive.launch  victor.launch  victor_sim.launch  weed_eval.launch  zed.launch  zed_offline.launch  zed_online.launch  zed_val.launch  zed_victor.launch
launch/include/: plant_selector.launch  val_off_husky.launch
rviz/: particle_filter.rviz  realsense.rviz  val.rviz  victor.rviz  weed_eval.rviz  zed.rviz  zed_offline.rviz  zed_online.rviz  zed_victor.rviz
scripts/: eval.py  skeletonize.py  weed_data_collector.py
segmentation_training/: leaf_model_1.ply  leaf_model_2.ply  leaf_model_3.ply  model_table.pkl
segmentation_training/all_manually_segmented/: 100.ply  20.ply  22_colors.npy  22_points.npy  28.ply  32.ply  34.ply  36.ply  39.ply  40.ply  41.ply  99.ply
segmentation_training/all_selections/: 2.npy  20.npy  28.npy  33.npy  34.npy  41.npy  49.npy  5.npy  75.npy  83.npy  91.npy
segmentation_training/manually_segmented/: 12.ply  14.ply  2.ply  22.ply  30.ply  33.ply  5.ply
segmentation_training/npc_training_data/: 104_dirt.ply  104_rocks.ply  104_weeds.ply  20_dirt.ply  20_rocks.ply  20_weeds.ply  22_dirt.ply  22_rocks.ply  22_weeds.ply  77_dirt.ply  77_rocks.ply  77_weeds.ply  79_dirt.ply  79_rocks.ply  79_weeds.ply  95_dirt.ply  95_rocks.ply  95_weeds.ply
segmentation_training/original_pcs/: 12.pcd  14.pcd  2.pcd  20.pcd  22.pcd  28.pcd  30.pcd  32.pcd  33.pcd  34.pcd  36.pcd  39.pcd  40.pcd  41.pcd  43.pcd  46.pcd  49.pcd  5.pcd  54.pcd  55.pcd  56.pcd  58.pcd  62.pcd  63.pcd  65.pcd  67.pcd  69.pcd  72.pcd  75.pcd  77.pcd  78.pcd  79.pcd  81.pcd  83.pcd  85.pcd  90.pcd  91.pcd  92.pcd
segmentation_training/original_selections (copy)/: 67.npy  69.npy  78.npy
segmentation_training/training_manually_segmented/: 104.ply  79.ply  93.ply  94.ply  95.ply
segmentation_training/training_selections/: 93.npy  99.npy
src/: alpha_shapes.ipynb  basic_motion.py  branch_cutting.py  clustering_tests.py  depth_filterer.py  eval.py  facet_region_growing.py  filterer.py  find_centroids.py  finding-stem.py  gen_alg.py  helpers.py  image-processing.py  kalman.py  leaf_axis.py  main_panel.cpp  multigrasp_evaluation.py  nearest_prototype_classifier.py  nearest_prototype_classifier_test.py  optimize_kmeans.py  plant_extraction.py  plant_extraction_robot.py  plant_extraction_val.py  plant_extraction_victor.py  plant_helpers.py  plant_modeling.py  publishing_selector.cpp  real_time_handler.cpp  repetitive_plant_extraction.py  rosbag_panel.cpp  rviz_helpers.py  send_pcd_msg.cpp  stem.py  victor_basic_motion.py  weed-extraction.py  weed_data_collector.py
src/.ipynb_checkpoints/: alpha_shapes-checkpoint.ipynb
unfinished/: finding-stem.py  kalman.py  skeletonize.py  stem.py
urdf/: gripper.urdf
weed_eval/: all_data.csv  color_distances.csv  kmeans_DBSCAN_distances.csv  kmeans_HDBSCAN_distances.csv  larger_weeds.pcd  multi_grasp_data.csv  multi_grasp_data_all.csv  optimized_test.csv  scratch_DBSCAN_distances.csv  segmented_weeds.pcd  segmented_weeds.ply  segmented_weeds2.pcd  weighted_kmeans_DBSCAN_distances.csv
weed_eval/all_pcd_files/: 100.pcd  101.pcd  102.pcd  103.pcd  104.pcd  1_multi.pcd  2_multi.pcd  3_multi.pcd  4_multi.pcd  93.pcd  94.pcd  95.pcd  96.pcd  97.pcd  98.pcd  99.pcd
weed_eval/best_manual_labels/: 46.npy
weed_eval/best_pcs/: 12.npy  30.npy  31.npy  (+2 more)
worlds/: val_plant.world
(+290 files in other folders)
