<?xml version="1.0"?>
<package format="2">
  <name>plant_selector</name>
  <version>0.0.0</version>
  <description>The plant_selector package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cjforema@umich.edu">christianforeman</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-gui</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>OpenCV</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>qtbase5-dev</build_export_depend>
  <build_export_depend>libqt5-core</build_export_depend>
  <build_export_depend>libqt5-gui</build_export_depend>
  <build_export_depend>libqt5-widgets</build_export_depend>
  <build_export_depend>OpenCV</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/publishing_selector_plugin_description.xml"/>
    <rviz plugin="${prefix}/main_panel_plugin_description.xml"/>
    <rviz plugin="${prefix}/rosbag_panel_plugin_description.xml"/>
  </export>
</package>
